# encurtador

./: .env.template  Cargo.toml  README.md  docker-compose.yaml  openapi.json
.github/workflows/: rust.yml
migrations/2023-08-06-180732_create_urls/: up.sql
migrations/2023-08-06-180809_create_visits/: down.sql  up.sql
src/: config.rs  error.rs  lib.rs  main.rs  models.rs  router.rs  schema.rs
src/db/: mod.rs  urls.rs  visits.rs
src/resources/: urls.rs
tests/: common.rs  integration.rs
tests/client/: .openapi-generator-ignore
tests/client/.openapi-generator/: FILES
tests/client/src/apis/: configuration.rs  default_api.rs
tests/client/src/models/: create_url.rs  mod.rs  url_response.rs
