[package]
name = "encurtador"
version = "0.1.0"
edition = "2021"

[dependencies]
base62 = "2.0.2"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono", "uuid", "r2d2"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.25"
gotham = "0.7.1"
gotham_derive = "0.7.0"
gotham_middleware_diesel = "0.5.0"
gotham_restful = { version = "0.8.3", default-features = false, features = ["full"] }
gotham_restful_derive = "0.8.2"
log = "0.4.17"
openapi_type = { version = "0.4.1", features = ["chrono", "uuid"] }
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
rand = "0.8.5"
serde = "1.0.179"
serde_json = "1.0.104"
serde_derive = "1.0.126"
tokio = "1.22.0"
url = "2.3.1"
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
fake = { version = "2.4.3", features = ["derive", "uuid", "chrono"] }
openapi = { path = "./tests/client" }
proptest = "1.2.0"
proptest-derive = "0.3.0"
temp-env = "0.3.4"
test-strategy = "0.3.1"
